--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" type="text/css">
+    <!-- MaterializeCSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <!-- Local CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
     {% endblock %}
+    <!-- Title -->
     <title>Pimp My Quiz!</title>
 </head>
 <body>
@@ -60,8 +64,8 @@
         </ul>
     </header>
 
+    <!-- flash messages -->
     <section id="flashSection">
-        <!-- flash messages -->
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
@@ -73,8 +77,9 @@
         {% endwith %}
     </section>
 
+    <!-- Modal Structure -->
     <section>
-        <!-- Modal Structure -->
+        <!-- duplicate quiz title modal -->
         <div id="dupTitleModal" class="modal">
             <div class="modal-content">
                 <!-- title and close button -->
@@ -112,6 +117,7 @@
             </div>
         </div>
 
+        <!-- change confirmation modal -->
         <div id="changeConfModal" class="modal">
             <div class="modal-content">
                 <!-- title and close button -->
@@ -140,7 +146,8 @@
             </div>
         </div>
 
-         <div id="formValidationModal" class="modal">
+        <!-- form validation modal -->
+        <div id="formValidationModal" class="modal">
             <div class="modal-content">
                 <!-- title and close button -->
                 <div class="modal-title-row row">
@@ -166,13 +173,17 @@
         </div>
     </section>
 
+    <!-- main content container -->
     <main class="container">
         {% block content %}
         {% endblock %}
     </main>
 
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- MaterializeCSS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Local Javascript -->
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/xhttp.js') }}"></script>
     {% block scripts %}
