--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <!-- login page -->
     <h3 class="center-align">Log In</h3>
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
@@ -20,7 +21,7 @@
                         <label for="pwd">Password</label>
                     </div>
                 </div>
-                <!-- register -->
+                <!-- log in -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
                         Log In <i class="fas fa-sign-in-alt"></i>
@@ -29,6 +30,7 @@
             </div>
         </form>
 
+        <!-- register link -->
         <div class="row col s12">
             <p class="center-align">
                 New Here? <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Register Account</a>
