--- a/templates/my_quizzes.html
+++ b/templates/my_quizzes.html
@@ -35,6 +35,7 @@
             </button>
         </div>
     </div>
+    <!-- quiz search results -->
     <div id="quizCollection" class="container">
         <div class="results-control hidden">
             <a href="#" class="results-control-first tooltipped" data-position="bottom" data-tooltip="First"><i class="fas fa-angle-double-left fa-fw light-blue-text text-darken-4"></i></a>
@@ -51,6 +52,7 @@
     </div>
 {% endblock%}
 
+<!-- Additional Javascript -->
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/copyquiz.js') }}"></script>
     <script src="{{ url_for('static', filename='js/quizlist.js') }}"></script>
