--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-    <!-- Main Content -->
+    <!-- Title row -->
     <div id="titleRow" class="row container">
         <div class="col s2"></div>
         <div class="col s8 center-align">
             <h3 class="light-blue-text text-darken-4">Create a Quiz</h3>
         </div>
+        <!-- Cancel Link -->
         <div class="col s2 right-align">
             <h3>
                 <a id="cancelUrl" class="light-blue-text text-darken-4 tooltipped" data-position="bottom" data-tooltip="Cancel" href="{{ cancel_url }}">
@@ -14,6 +15,7 @@
             </h3>
         </div>
     </div>
+    <!-- Main Content -->
     <div id="createQuiz" class="container">
         <form id="createQuizForm" autocomplete="off" method="post">
             <!-- Prevent Submission of Form on Enter Keypress -->
@@ -72,6 +74,7 @@
                         <input id="roundCount" name="roundCount" type="text" class="hidden" value="1">
                     </div>
                     <div class="row">
+                        <!-- Rounds -->
                         <ul class="collapsible expandable">
                             <li class="active">
                                 <div class="collapsible-header round-title" data-round="1">
@@ -133,6 +136,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col s12">
+                                            <!-- Questions -->
                                             <ul class="collapsible expandable">
                                                 <li class="active">
                                                     <div class="collapsible-header question-title" data-question="1">
@@ -270,6 +274,7 @@
     </div>
 {% endblock%}
 
+<!-- Additional Javascript -->
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/newquizlisteners.js') }}"></script>
     <script src="{{ url_for('static', filename='js/newquiz.js') }}"></script>
