--- a/templates/quiz_sheet.html
+++ b/templates/quiz_sheet.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" type="text/css">
+    <!-- MaterializeCSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <!-- Local CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <!-- Title -->
     <title>Pimp My Quiz!</title>
 </head>
 <body>
+    <!-- Quiz Container -->
     <main id="quizSheet" class="container">
+        <!-- quiz title -->
         <h3 class="light-blue-text text-darken-4 center-align">{{ viewQuiz.title }}</h3>
+        <!-- quiz author -->
         <h5 class="light-blue-text text-darken-4 center-align">By: {{ viewQuiz.author }}</h5>
+        <!-- quiz category -->
         <h5 class="light-blue-text text-darken-4 center-align">Category: <i class="fas {{ viewQuiz.category_icon.class }} fa-fw"></i> {{ viewQuiz.category }}</h5>
         <div class="divider"></div>
         <div class="quiz-container page-break-after-avoid">
+            <!-- rounds -->
             {% for round in viewQuiz.rounds %}
                 <div class="round-container">
                     {% if loop.length > 1 or round.isPictureRound %}
@@ -35,6 +44,8 @@
                         </h5>
                     {% endif %}
                     {% if round.isPictureRound == True %}
+                        <!-- picture round -->
+                        <!-- pictures -->
                         <div class="question-container row">
                         {% for question in round.questions %}
                             {% if loop.last and question.question_num is odd %}
@@ -43,7 +54,9 @@
                                         <div class="col s3"></div>
                                         <div class="col s6">
                                             <div class="image-preview">
+                                                <!-- image -->
                                                 <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image small hidden inline-block" src="">
+                                                <!-- preloader -->
                                                 <div class="preloader-container">
                                                     <div class="preloader-wrapper big active">
                                                         <div class="spinner-layer">
@@ -71,7 +84,9 @@
                             {% else %}
                                 <div class="col s6 page-break-inside-avoid">
                                     <div class="image-preview">
+                                        <!-- image -->
                                         <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image small hidden inline-block" src="">
+                                        <!-- preloader -->
                                         <div class="preloader-container">
                                             <div class="preloader-wrapper big active">
                                                 <div class="spinner-layer">
@@ -98,6 +113,8 @@
                         </div>
                         <div class="divider"></div>
                     {% else %}
+                        <!-- non-picture round -->
+                        <!-- questions -->
                         {% for question in round.questions %}
                             <div class="question-container page-break-inside-avoid">
                                 <div class="row">
@@ -114,7 +131,9 @@
                                 </div>
                                 {% if question.question_img_url != '' %}
                                     <div class="center-align">
+                                        <!-- image -->
                                         <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image hidden inline-block" src="">
+                                        <!-- preloader -->
                                         <div class="preloader-container">
                                             <div class="preloader-wrapper big active">
                                                 <div class="spinner-layer">
@@ -133,6 +152,7 @@
                                     </div>
                                 {% endif %}
                                 {% if question.multiple_choice == True %}
+                                    <!-- multiple choice options -->
                                     {% for option in question.multiple_choice_options %}
                                         <div class="row">
                                             <div class="col s1"></div>
@@ -144,7 +164,9 @@
                                         </div>
                                         {% if option.answer_img_url != '' %}
                                             <div class="center-align">
+                                                <!-- image -->
                                                 <img id="img_o_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" class="quiz-image hidden" src="">
+                                                <!-- preloader -->
                                                 <div class="preloader-container">
                                                     <div class="preloader-wrapper big active">
                                                         <div class="spinner-layer">
@@ -172,12 +194,18 @@
             {% endfor %}
         </div>
     </main>
+
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- MaterializeCSS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Local Javascript -->
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/viewquiz.js') }}"></script>
     <script>
+        /* Document Ready Function */
         $(function() {
+            // load images
             loadImg({{ viewQuiz.rounds | tojson }});
         });
     </script>
