Correctly terminated &times with ;

--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -13,7 +13,7 @@
                         <h5 id="modalTitle">Edit User</h5>
                     </div>
                     <div class="col s1 modal-close-button">
-                        <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#">&times</a>
+                        <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#">&times;</a>
                     </div>
                 </div>
                 <!-- username -->
