Correctly terminated &times with ; Altered formValidationModal. Encapsulated <h6> within <p> instead of vice versa

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
                         <h5>Duplicate Quiz Title</h5>
                     </div>
                     <div class="col s1 modal-close-button">
-                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times;</a>
                     </div>
                 </div>
                 <!-- quiz title -->
@@ -126,7 +126,7 @@
                         <h5 id="modalTitle"></h5>
                     </div>
                     <div class="col s1 modal-close-button">
-                        <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                        <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times;</a>
                     </div>
                 </div>
                 <div class="row">
@@ -155,12 +155,12 @@
                         <h5>Validation Errors</h5>
                     </div>
                     <div class="col s1 modal-close-button">
-                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times;</a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <h6>Your Quiz has validation errors.<p>Valid questions and rounds have been collapsed.</p><p>Please review any open items highlighted in red.</p></h6>
+                        <p><h6>Your Quiz has validation errors.</h6></p><p><h6>Valid questions and rounds have been collapsed.</h6></p><p><h6>Please review any open items highlighted in red.</h6></p>
                     </div>
                 </div>
                 <!-- ok button -->
