--- a/templates/base.html
+++ b/templates/base.html
@@ -160,7 +160,9 @@
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <p><h6>Your Quiz has validation errors.</h6></p><p><h6>Valid questions and rounds have been collapsed.</h6></p><p><h6>Please review any open items highlighted in red.</h6></p>
+                        <h6>Your Quiz has validation errors.</h6>
+                        <h6>Valid questions and rounds have been collapsed.</h6>
+                        <h6>Please review any open items highlighted in red.</h6>
                     </div>
                 </div>
                 <!-- ok button -->
