--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
                 <!-- title and close button -->
                 <div class="modal-title-row row">
                     <div class="col s11">
-                        <h5 id="modalTitle"></h5>
+                        <h5 id="modalTitle"><!-- change confirmation title here --></h5>
                     </div>
                     <div class="col s1 modal-close-button">
                         <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times;</a>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <h6 id="modalMessage"></h6>
+                        <h6 id="modalMessage"><!-- change confirmation message here --></h6>
                     </div>
                 </div>
                 <!-- save changes -->
