Altered internal js doc ready func Added jinja if user in session check If user in session, call initQuizCopy() and add data-quizId to modalCopyQuizButton

--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -148,8 +148,13 @@
             // Load images
             loadImg({{ viewQuiz.rounds | tojson }});
 
-            // Set data-quizId attribute on modalCopyQuizButton
-            $('#modalCopyQuizButton').attr('data-quizId', '{{ viewQuiz._id }}');
+            {% if 'user' in session %}
+                // Initialise listeners and MaterializeCSS modal for quiz copy functionality
+                initQuizCopy()
+
+                // Set data-quizId attribute on modalCopyQuizButton
+                $('#modalCopyQuizButton').attr('data-quizId', '{{ viewQuiz._id }}');
+            {% endif %}
         });
     </script>
 {% endblock %}
