--- a/templates/base.html
+++ b/templates/base.html
@@ -181,6 +181,26 @@
         {% endblock %}
     </main>
 
+    <footer class="footer text-shadow light-blue darken-4 center-align">
+        <h5>
+            <a class="tooltipped" data-position="top" data-tooltip="Facebook" href="https://wwww.facebook.com">
+                <i class="fab fa-facebook fa-fw"></i>
+            </a>
+            <a class="tooltipped" data-position="top" data-tooltip="Instagram" href="https://wwww.instagram.com">
+                <i class="fab fa-instagram fa-fw"></i>
+            </a>
+            <a class="tooltipped" data-position="top" data-tooltip="Twitter" href="https://wwww.twitter.com">
+                <i class="fab fa-twitter fa-fw"></i>
+            </a>
+            <a class="tooltipped" data-position="top" data-tooltip="Youtube" href="https://wwww.youtube.com">
+                <i class="fab fa-youtube fa-fw"></i>
+            </a>
+            <a class="tooltipped" data-position="top" data-tooltip="Contact Us" href="mailto://admins@pimp-my-quiz.herokuapp.com">
+                <i class="fas fa-envelope fa-fw"></i>
+            </a>
+        </h5>
+    </footer>
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- MaterializeCSS -->
