--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,9 +9,45 @@
 * Browsers: last 4 version
 */
 
+html, body {
+    height: 100%;
+}
+
 /* Min Supported Screen Width */
 body {
-    min-width: 360px
+    min-width: 360px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+}
+
+main {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 auto;
+            flex: 1 auto;
+}
+
+footer {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+
+    /* Box Shadow style rule copied from MaterializeCSS nav rule, with the v-offset reversed to put the shadow at the top of the footer */
+    -webkit-box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.14), 0 -3px 1px -2px rgba(0,0,0,0.12), 0 -1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.14), 0 -3px 1px -2px rgba(0,0,0,0.12), 0 -1px 5px 0 rgba(0,0,0,0.2);
+}
+
+footer h5 {
+    margin: 0.875rem 0;
+}
+
+footer a {
+    display: inline-block;
+    color: #fff;
+    min-width: 35px;
 }
 
 /* MaterializeCSS Select Box Style Overrides */
@@ -297,7 +333,7 @@ form .user-search .input-field {
     font-size: inherit !important;
     font-weight: inherit !important;
     line-height: inherit !important;
-    margin-bottom: none !important;
+    margin-bottom: 0 !important;
 }
 
 .collapsible-body .title {
@@ -405,6 +441,11 @@ left: 3.5px;
 /* MaterializeCSS prefix Style Override */
 .input-field .prefix {
     line-height: 1;
+}
+
+/* MaterializeCSS label Style Override */
+.input-field.col .prefix ~ label {
+    width: 100%;
 }
 
 /* Valid/Invalid classes for '.correct' checkboxes */
