--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -280,63 +280,65 @@
                                                                         </div>
                                                                         <input id="multiCount_{{ round.round_num }}_{{ question.question_num }}" name="multiCount_{{ round.round_num }}_{{ question.question_num }}" type="text" class="hidden" value="{{ question.multi_count }}">
                                                                         <!-- Multiple Choice Options -->
-                                                                        <div class="multi-container col s12">
+                                                                        <div class="answers-container col s12">
                                                                             {% for option in question.multiple_choice_options %}
-                                                                                <ul id="answerHelperCollapsible_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" class="collapsible helper-collapsible col s12">
-                                                                                    <li>
-                                                                                        <div class="collapsible-header"></div>
-                                                                                        <div class="collapsible-body">
-                                                                                            <blockquote class="black-text">
-                                                                                                An answer must be between 1-255 characters in length.
-                                                                                            </blockquote>
-                                                                                        </div>
-                                                                                    </li>
-                                                                                    <li class="paired">
-                                                                                        <div class="collapsible-header"></div>
-                                                                                        <div class="collapsible-body">
-                                                                                            <blockquote class="black-text">
-                                                                                                Please provide an answer, and/or a valid link to an image hosted online.<br>
-                                                                                                An answer must be between 1-255 characters in length.
-                                                                                            </blockquote>
-                                                                                        </div>
-                                                                                    </li>
-                                                                                </ul>
-                                                                                <div class="input-field multi-input col s10">
-                                                                                    <span class="prefix center-align" data-question="{{ question.question_num }}" data-multi="{{ option.option_num }}">
-                                                                                        {% if option.option_num == question.multiple_choice_options|length %}
-                                                                                            {% if option.option_num < 3 %}
-                                                                                                <a href="#!" class="multi-control-add light-blue-text text-darken-4">+</a>
-                                                                                            {% else %}
-                                                                                                <a href="#!" class="multi-control-remove light-blue-text text-darken-4">-</a><a href="#!" class="multi-control-add light-blue-text text-darken-4">+</a>
+                                                                                <div class="multi-container col s12">
+                                                                                    <ul id="answerHelperCollapsible_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" class="collapsible helper-collapsible col s12">
+                                                                                        <li>
+                                                                                            <div class="collapsible-header"></div>
+                                                                                            <div class="collapsible-body">
+                                                                                                <blockquote class="black-text">
+                                                                                                    An answer must be between 1-255 characters in length.
+                                                                                                </blockquote>
+                                                                                            </div>
+                                                                                        </li>
+                                                                                        <li class="paired">
+                                                                                            <div class="collapsible-header"></div>
+                                                                                            <div class="collapsible-body">
+                                                                                                <blockquote class="black-text">
+                                                                                                    Please provide an answer, and/or a valid link to an image hosted online.<br>
+                                                                                                    An answer must be between 1-255 characters in length.
+                                                                                                </blockquote>
+                                                                                            </div>
+                                                                                        </li>
+                                                                                    </ul>
+                                                                                    <div class="input-field multi-input col s10">
+                                                                                        <span class="prefix center-align" data-question="{{ question.question_num }}" data-multi="{{ option.option_num }}">
+                                                                                            {% if option.option_num == question.multiple_choice_options|length %}
+                                                                                                {% if option.option_num < 3 %}
+                                                                                                    <a href="#!" class="multi-control-add light-blue-text text-darken-4">+</a>
+                                                                                                {% else %}
+                                                                                                    <a href="#!" class="multi-control-remove light-blue-text text-darken-4">-</a><a href="#!" class="multi-control-add light-blue-text text-darken-4">+</a>
+                                                                                                {% endif %}
                                                                                             {% endif %}
-                                                                                        {% endif %}
-                                                                                    </span>
-                                                                                    <input id="answer_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" name="answer_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" type="text" minlength="1" maxlength="255" class="option" value="{{ option.answer_text }}" required>
-                                                                                    <label for="answer_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" data-error="Invalid Answer" data-default="Answer {{ round.round_num }}-{{ question.question_num }}-{{ option.option_num }}">Answer {{ round.round_num }}-{{ question.question_num }}-{{ option.option_num }}</label>
+                                                                                        </span>
+                                                                                        <input id="answer_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" name="answer_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" type="text" minlength="1" maxlength="255" class="option" value="{{ option.answer_text }}" required>
+                                                                                        <label for="answer_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" data-error="Invalid Answer" data-default="Answer {{ round.round_num }}-{{ question.question_num }}-{{ option.option_num }}">Answer {{ round.round_num }}-{{ question.question_num }}-{{ option.option_num }}</label>
+                                                                                    </div>
+                                                                                    <div class="input-field col s2 checkbox-container inline-input center-align">
+                                                                                        <label class="center-align full-width">
+                                                                                            <input id="correct_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" name="correct_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" type="checkbox" class="correct" {% if option.correct == True %}checked{% endif %}/>
+                                                                                            <span></span>
+                                                                                        </label>
+                                                                                    </div>
+                                                                                    <!-- Optional Image URL -->
+                                                                                    <ul id="oImgHelperCollapsible_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" class="collapsible helper-collapsible col s12">
+                                                                                        <li>
+                                                                                            <div class="collapsible-header"></div>
+                                                                                            <div class="collapsible-body">
+                                                                                                <blockquote class="black-text">
+                                                                                                    Please provide a valid link to an image hosted online
+                                                                                                </blockquote>
+                                                                                            </div>
+                                                                                        </li>
+                                                                                    </ul>
+                                                                                    <div class="input-field multi-input col s12">
+                                                                                        <span class="prefix light-blue-text text-darken-4 center-align"></span>
+                                                                                        <input id="a_img_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" name="a_img_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" type="url" class="img-url" value="{{ option.answer_img_url }}">
+                                                                                        <label for="a_img_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" data-error="Invalid URL" data-default="Optional Image URL">Optional Image URL</label>
+                                                                                    </div>
+                                                                                    <div class="image-preview col s12 center-align"></div>
                                                                                 </div>
-                                                                                <div class="input-field col s2 checkbox-container inline-input center-align">
-                                                                                    <label class="center-align full-width">
-                                                                                        <input id="correct_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" name="correct_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" type="checkbox" class="correct" {% if option.correct == True %}checked{% endif %}/>
-                                                                                        <span></span>
-                                                                                    </label>
-                                                                                </div>
-                                                                                <!-- Optional Image URL -->
-                                                                                <ul id="oImgHelperCollapsible_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" class="collapsible helper-collapsible col s12">
-                                                                                    <li>
-                                                                                        <div class="collapsible-header"></div>
-                                                                                        <div class="collapsible-body">
-                                                                                            <blockquote class="black-text">
-                                                                                                Please provide a valid link to an image hosted online
-                                                                                            </blockquote>
-                                                                                        </div>
-                                                                                    </li>
-                                                                                </ul>
-                                                                                <div class="input-field multi-input col s12">
-                                                                                    <span class="prefix light-blue-text text-darken-4 center-align"></span>
-                                                                                    <input id="a_img_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" name="a_img_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" type="url" class="img-url" value="{{ option.answer_img_url }}">
-                                                                                    <label for="a_img_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" data-error="Invalid URL" data-default="Optional Image URL">Optional Image URL</label>
-                                                                                </div>
-                                                                                <div class="image-preview col s12 center-align"></div>
                                                                             {% endfor %}
                                                                         </div>
                                                                     {% endif %}
