--- a/templates/base.html
+++ b/templates/base.html
@@ -19,29 +19,31 @@
 <body>
     <header>
         <!-- top navbar -->
-         <nav class="text-shadow light-blue darken-4">
-            <div class="nav-wrapper">
-            <a href="#" class="nav-title">Pimp My Quiz!</a>
-            <a href="#" data-target="sideNav" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-            <ul class="right hide-on-med-and-down">
-                {% if not session.user %}
-                    <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
-                {% endif %}
-                {% if session.user %}
-                    <li><a id='navMyQuizzes' href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
-                    <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
-                    <li><a id='navQuizSearch' href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
-                    {% if session.user_role == "global admin" or session.user_role == "user account admin" %}
-                        <li><a href="{{ url_for('admin_users') }}">User Admin</a></li>
+        <div class="navbar-fixed">
+            <nav class="text-shadow light-blue darken-4">
+                <div class="nav-wrapper">
+                <a href="#" class="nav-title">Pimp My Quiz!</a>
+                <a href="#" data-target="sideNav" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    {% if not session.user %}
+                        <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
                     {% endif %}
-                    <li><a id='navLogout' href="{{ url_for('logout') }}">Log Out</a></li>
-                {% else %}
-                    <li><a href="{{ url_for('login') }}">Log In</a></li>
-                    <li><a href="{{ url_for('register') }}">Register</a></li>
-                {% endif %}
-            </ul>
-            </div>
-        </nav>
+                    {% if session.user %}
+                        <li><a id='navMyQuizzes' href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
+                        <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
+                        <li><a id='navQuizSearch' href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
+                        {% if session.user_role == "global admin" or session.user_role == "user account admin" %}
+                            <li><a href="{{ url_for('admin_users') }}">User Admin</a></li>
+                        {% endif %}
+                        <li><a id='navLogout' href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}">Log In</a></li>
+                        <li><a href="{{ url_for('register') }}">Register</a></li>
+                    {% endif %}
+                </ul>
+                </div>
+            </nav>
+        </div>
 
         <!-- mobile sidenav -->
         <ul class="sidenav" id="sideNav">
