Added styling for .sidenav li.active

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,6 +143,10 @@ nav ul a:hover {
     background-color: rgba(0,0,0,0.1);
 }
 
+.sidenav li.active {
+	background-color: rgba(0,0,0,0.1);
+}
+
 .sidenav li > a:hover {
 	background-color: rgba(0,0,0,0.1);
 }
